--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,6 +4,16 @@
         <img src="https://talk.openmrs.org/uploads/default/original/2X/8/80fd6086dca0a3a38f9d3b81fdf48196e1fe307f.png"
             alt="" width="50" height="40">
     </a>
+    <ul>
+        <li class="nav-item" style="float: right" id="logoutLblPos">
+            <a
+              class="nav-link p-3"
+              href=""
+              style="background-color: black; color: white;" 
+            
+              >Logout</a
+            >
+    </ul>
 
 </nav>
 
