--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <!-- <router-outlet></router-outlet> -->
-<app-create></app-create>
-<!-- 
-<app-patientinfo></app-patientinfo> -->
+
+<app-encounters></app-encounters>
