--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+<app-nav></app-nav>
 <div>
   <div>
     <h3><b>Patient Search</b></h3>
@@ -30,7 +32,8 @@
         <table class="table table-striped table-responsive table-hover">
           <thead>
             <tr>
-              <th scope="col">Identifier/Name</th>
+              <th scope="col">Identifier</th>
+              <th scope="col">Name</th>
               <th scope="col">Age</th>
               <th scope="col">Gender</th>
               <th scope="col">Birthdate</th>
@@ -49,7 +52,9 @@
                         totalItems: count
                       };
                 let i = index
-              " routerLink="[/patientinfo]"
+              "
+              class="clickable"
+              routerLink="/PatientInfo"
             >
               <!-- <td><ul *ngFor="let identifier of patient.identifiers" >
             <li>
@@ -57,7 +62,12 @@
             </li>
           </ul></td> -->
               <!-- <td>{{patient.identifiers}}</td> -->
-              <td>{{ patient.display }}</td>
+              <td>
+                <a (click)="navigateToPatientInfo(patient.uuid)">{{
+                  patient.display
+                }}</a>
+              </td>
+              <td>{{ patient.person.display }}</td>
               <td>{{ patient.person.age }}</td>
               <td>{{ patient.person.gender }}</td>
               <td>{{ patient.person.birthdate }}</td>
@@ -70,6 +80,7 @@
           <select (change)="onTableSizeChange($event)">
             <option *ngFor="let size of tableSizes">
               {{ size }}
+              +
             </option>
           </select>
         </div>
@@ -162,4 +173,4 @@
     </div>
   </div>
 </div>
-
+<app-patientinfo [result]="results"></app-patientinfo>
