--- a/src/app/create/patientinfo/patientinfo.component.html
+++ b/src/app/create/patientinfo/patientinfo.component.html
@@ -1,6 +1,5 @@
 <header>
   <!-- <nav>
-
     <ul class="nav nav-tabs">
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="#"
@@ -38,23 +37,27 @@
     <div>
       <h4>Demographics</h4>
     </div>
-    <table class="table table-striped">
-      <tbody>
-
+    <table
+      class="table table-striped"
+      *ngFor="let patient of result | slice: 0:1"
+    >
+      <tbody [result]="results">
         <tr>
-          <td><strong>Name:</strong></td>
-          <td><strong>Deceased:</strong></td>
+          <td><strong>Name:</strong>{{ patient.person.display }}</td>
+          <td><strong>Deceased:</strong>{{ patient.person.dead }}</td>
         </tr>
         <tr>
-          <td><strong>Gender:</strong></td>
-          <td><strong>Cause of Death:</strong></td>
+          <td><strong>Gender:</strong>{{ patient.person.gender }}</td>
+          <td>
+            <strong>Cause of Death:</strong>{{ patient.person.causeOfDeath }}
+          </td>
         </tr>
         <tr>
-          <td><strong>DOB:</strong></td>
-          <td><strong>Death Date:</strong></td>
+          <td><strong>DOB:</strong>{{ patient.person.birthdate }}</td>
+          <td><strong>Death Date:</strong>{{ patient.person.deathDate }}</td>
         </tr>
         <tr>
-          <td><strong>Age:</strong></td>
+          <td><strong>Age:</strong>{{ patient.person.age }}</td>
         </tr>
       </tbody>
     </table>
@@ -62,10 +65,11 @@
     <div>
       <h4>Contacts</h4>
     </div>
-    <table class="table table-striped">
-
+    <table
+      class="table table-striped"
+      *ngFor="let patient of result | slice: 0:1"
+    >
       <tbody>
-       
         <tr>
           <td><strong>Phone Number:</strong></td>
           <td><strong>Alternative Phone Number:</strong></td>
@@ -85,10 +89,11 @@
     <div>
       <h4>Occupation</h4>
     </div>
-    <table class="table table-striped">
-        
+    <table
+      class="table table-striped"
+      *ngFor="let patient of result | slice: 0:1"
+    >
       <tbody>
-       
         <tr>
           <td><strong>Occupation:</strong></td>
         </tr>
@@ -98,9 +103,11 @@
     <div>
       <h4>Highest Educational Level</h4>
     </div>
-    <table class="table table-striped">
+    <table
+      class="table table-striped"
+      *ngFor="let patient of result | slice: 0:1"
+    >
       <tbody>
-  
         <tr>
           <td><strong>Highest Educational Level:</strong></td>
         </tr>
@@ -114,11 +121,13 @@
     <div>
       <h4>Address</h4>
     </div>
-    <table class="table table-striped">
+    <table
+      class="table table-striped"
+      *ngFor="let patient of result | slice: 0:1"
+    >
       <tbody>
-     
-        <tr>
-          <td><strong>County:</strong></td>
+        <tr *ngFor="let address of patient.preferredAddress | slice: 0:1">
+          <td><strong>County:</strong>{{ address.display }}</td>
           <td><strong>Subcounty:</strong></td>
         </tr>
         <tr>
@@ -135,45 +144,32 @@
     <div>
       <h4>Identifiers</h4>
     </div>
-    <table class="table table-striped">
+    <table
+      class="table table-striped"
+      *ngFor="let patient of result | slice: 0:1"
+    >
       <tbody>
-      
-        <tr>
-          <td><strong>CCC Number:</strong></td>
-          <td><strong>Location:</strong></td>
-        </tr>
-        <tr>
-          <td><strong>AMRS Medical Record Number:</strong></td>
-          <td><strong>Location:</strong></td>
-        </tr>
-        <tr>
-          <td><strong>AMRS Universal ID:</strong></td>
-          <td><strong>Location:</strong></td>
-        </tr>
-        <tr>
-          <td><strong>Kenya National ID Number:</strong></td>
-          <td><strong>Location:</strong></td>
-        </tr>
-        <tr>
-          <td><strong>UPI Number:</strong></td>
+        <tr *ngFor="let identifier of patient.identifiers | slice: 0:5">
+          <td>{{ identifier.display }}</td>
           <td><strong>Location:</strong></td>
         </tr>
       </tbody>
     </table>
-    <hr>
+    <hr />
     <div>
       <h4>Relationships</h4>
     </div>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-              <th scope="col">Relationship</th>
-              <th scope="col">Person Name</th>
-            </tr>
-          </thead>
-      <tbody>
-    
-      </tbody>
+    <table
+      class="table table-striped"
+      *ngFor="let patient of result | slice: 0:1"
+    >
+      <thead>
+        <tr>
+          <th scope="col">Relationship</th>
+          <th scope="col">Person Name</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
     </table>
   </div>
 </div>
